# ai-dev-template

./: .ai-sast-baseline.json  .env.example  .gitignore  .gitleaks.toml  .mcp.example.json  .pre-commit-config.yaml  AGENTS.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONSTITUTION.md  GEMINI.md  GOVERNANCE.md  Makefile  README.md  SECRETS.md  SECURITY.md  STANDARDS.md  bootstrap.sh  pyproject.toml  requirements-dev.txt  requirements.txt  review-prompt.md
.githooks/: pre-commit
.github/: copilot-instructions.md  pull_request_template.md
agents/: backlog-worker.md  docs-drift-guardian.md  governance-control-mapper.md  independent-reviewer.md  observability-fleet-health.md  orchestrator.md  privacy-data-classifier.md  release-supply-chain-steward.md  security-reviewer.md  spec-author.md  test-author.md  threat-modeler.md
ai_dev_template/: __init__.py  ai_sast.py  artifacts.py  documents.py  fleet.py  sanitize.py  secrets.py  spawn.py  verdicts.py
config/: ai-sast.example.json  approved-models.example.json  fleet.example.json  identity.example.json  m365-publisher.example.json  mandatory-principles.json  model-routing.example.json  secrets.example.json
docs/: agent-fireteam.md  ai-governance-mapping.md  ai-sast.md  contributor.md  copilot-memory.md  diagramming.md  docs-boundary.md  docs-impact.md  document-generation.md  documentation-gate.md  first-run.md  fleet.md  generated-artifacts.md  identity.md  independent-review.md  m365-integration.md  (+11 more)
docs-site/: README.md  docusaurus.config.js  package-lock.json  package.json  public-docs-plan.md  sidebars.js
(+124 files in other folders)
