[project]
name = "ai-dev-template"
version = "0.1.0"
description = "Reusable AI-assisted, human-governed development starter template"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "bandit>=1.7.0",
  "mypy>=1.10.0",
  "pip-audit>=2.7.0",
  "pre-commit>=4.0.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "python-docx>=1.1.0",
  "python-pptx>=1.0.0",
  "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
include = ["ai_dev_template*", "skills*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.coverage.run]
relative_files = true
source = ["ai_dev_template", "skills", "scripts"]

[tool.coverage.report]
omit = ["*/__init__.py", "*/tests/*"]

[tool.bandit]
skips = []

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
exclude = ["docs-site", "generated"]
